fix: clean code and design

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,19 +1,29 @@
 <resources>
-    <string name="app_name">TPApp</string>
-    <string name="bienvenue_au_studio_ghibli">¡Bienvenido al Studio Ghibli!</string>
-    <string name="se_connecter">Iniciar sesión</string>
-    <string name="retour">Volver</string>
-    <string name="identifiez_vous">Identifíquese</string>
-    <string name="mot_de_passe_oubli">¿Olvidaste tu contraseña?</string>
-    <string name="nouveau_sur_studio_ghibli_cr_er_un_compte">¿Nuevo en Studio Ghibli? Crear una cuenta</string>
-    <string name="ou">O</string>
-    <string name="mot_de_passe">Contraseña</string>
+    <string name="signin">Iniciar sesión</string>
+    <string name="back">Volver</string>
+    <string name="id_yourself">Identifíquese</string>
+    <string name="forgot_pwd">¿Olvidaste tu contraseña?</string>
+    <string name="or">O</string>
+    <string name="pwd">Contraseña</string>
     <string name="email">Correo electrónico</string>
     <string name="login">Registrarse</string>
-    <string name="inscrivez_vous">Regístrate</string>
-    <string name="name">Nombre</string>
-    <string name="d_j_sur_studio_ghibli_se_connecter">¿Ya tienes una cuenta en Studio Ghibli? Inicia sesión</string>
-    <string name="t_l_phone">Teléfono</string>
-    <string name="pr_nom">Apellido</string>
-    <string name="characters">Personajes</string>
+    <string name="signup">Regístrate</string>
+    <string name="firstname">Nombre</string>
+    <string name="phone">Teléfono</string>
+    <string name="name">Apellido</string>
+    <string name="new_on_app">¿Nuevo en PowerHome? Crea una cuenta</string>
+    <string name="pwrhme_description">PowerHome est une application mobile permettant aux résidents d\'une résidence participative de suivre et d\'optimiser leur consommation énergétique. Grâce à un système de bonus/malus sous forme d\'éco-coins, l\'application encourage des comportements éco-responsables pour éviter les pics de consommation.</string>
+    <string name="dev_by">Desarrollado por : • Aron DESCARPENTRIES • Damon Ba • Juliette Cournon</string>
+    <string name="project_context">Proyecto realizado en el marco del curso de desarrollo móvil del IUT Paris Rives de Seine – 2025</string>
+    <string name="already_on_pwrhme">¿Ya estás en PowerHome? Inicia sesión</string>
+    <string name="save_edits">Guardar los cambios</string>
+    <string name="add_stuff">Añadir un equipo</string>
+    <string name="my_stuff">Mis equipos</string>
+    <string name="space">Superficie</string>
+    <string name="floor">Piso</string>
+    <string name="my_home">Mi vivienda</string>
+    <string name="home_list">Lista de viviendas</string>
+    <string name="calendar">Calendario</string>
+    <string name="infos">Saber más</string>
+    <string name="profil">Perfil</string>
 </resources>
