--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,19 +1,29 @@
 <resources>
-<string name="app_name">TPApp</string>
-<string name="bienvenue_au_studio_ghibli">Bienvenue au Studio Ghibli !</string>
-<string name="se_connecter">Se connecter</string>
-<string name="retour">Retour</string>
-<string name="identifiez_vous">Identifiez-vous</string>
-<string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
-<string name="nouveau_sur_studio_ghibli_cr_er_un_compte">Nouveau sur Studio Ghibli ? Créer un compte</string>
-<string name="ou">OU</string>
-    <string name="mot_de_passe">Mot de passe</string>
+    <string name="signin">Se connecter</string>
+    <string name="back">Retour</string>
+    <string name="id_yourself">Identifiez-vous</string>
+    <string name="forgot_pwd">Mot de passe oublié ?</string>
+    <string name="or">OU</string>
+    <string name="pwd">Mot de passe</string>
     <string name="email">Email</string>
     <string name="login">S\'inscrire</string>
-    <string name="inscrivez_vous">Inscrivez-vous</string>
-    <string name="name">Nom</string>
-    <string name="d_j_sur_studio_ghibli_se_connecter">Déjà sur Studio Ghibli ? Se connecter</string>
-    <string name="t_l_phone">Téléphone</string>
-    <string name="pr_nom">Prénom</string>
-    <string name="characters">Personnages</string>
+    <string name="signup">Inscrivez-vous</string>
+    <string name="firstname">Nom</string>
+    <string name="phone">Téléphone</string>
+    <string name="name">Prénom</string>
+    <string name="new_on_app">Nouveau sur PowerHome ? Créer un compte</string>
+    <string name="pwrhme_description">PowerHome est une application mobile permettant aux résidents d\'une résidence participative de suivre et d\'optimiser leur consommation énergétique. Grâce à un système de bonus/malus sous forme d\'éco-coins, l\'application encourage des comportements éco-responsables pour éviter les pics de consommation.</string>
+    <string name="dev_by">Développé par : • Aron DESCARPENTRIES • Damon Ba • Juliette Cournon</string>
+    <string name="project_context">Projet réalisé dans le cadre de la ressource de développement mobile de l\'IUT Paris Rives de Seine - 2025</string>
+    <string name="already_on_pwrhme">Déjà sur PowerHome ? Se connecter</string>
+    <string name="save_edits">Enregistrer les modifications</string>
+    <string name="add_stuff">Ajouter un équipement</string>
+    <string name="my_stuff">Mes équipements</string>
+    <string name="space">Superficie</string>
+    <string name="floor">Etage</string>
+    <string name="my_home">Mon habitat</string>
+    <string name="home_list">Liste des habitats</string>
+    <string name="calendar">Calendrier</string>
+    <string name="infos">En savoir plus</string>
+    <string name="profil">Profil</string>
 </resources>
